# Uni-Recommendation-System

./: .env  README.md  pyproject.toml
src/university_finder_crew/: crew.py  main.py  resume.md
src/university_finder_crew/config/: agents.yaml  tasks.yaml
